--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10453,6 +10453,15 @@ body {
     padding-bottom: 1rem !important;
 }
 
+.btn-black:hover {
+    opacity: 0.7;
+}
+
+.submit-button .btn {
+    max-width: 70vw;
+    margin-bottom: 0.5rem;
+}
+
 /* general styling */
 
 .hidden {
@@ -10482,9 +10491,15 @@ body {
 .text-blue {
     color: #426765;
 }
+.text-white {
+    color: white;
+}
 
 .bg-blue {
   background-color: #426765;
+}
+.bg-blue:hover {
+  opacity: 0.7;
 }
 
 .align-vertically { /* credit to https://webdevblog.com/css-vertical-align/ */
