--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -114,7 +114,7 @@
                 </div>
                 <div class="col-12 col-lg-6">
                     <p class="text-muted text-center">Please fill out the form below to complete your order</p>
-                    <form action="{% url 'create_order' %}?basket_number={{ cookie }}" method="POST" id="payment-form">
+                    <form action="{% url 'create_order' %}" method="POST" id="payment-form">
                         {% csrf_token %}
                         <fieldset class="rounded px-3 mb-5">
                             <legend class="fieldset-label small text-black px-2 w-auto">Details</legend>
@@ -150,6 +150,7 @@
                             <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                             <!-- Pass the client secret to the view so we can get the payment intent id -->
                             <input type="hidden" value="{{ client_secret }}" name="client_secret">
+                            <input type="unhidden" value="{{ cookie }}" name="basket_number">
                         </fieldset>
 
                         <div class="submit-button text-right mt-5 mb-2">                    
