--- a/checkout/templates/checkout/checkout.html
+++ b/checkout/templates/checkout/checkout.html
@@ -150,7 +150,8 @@
                             <div class="mb-3 text-danger" id="card-errors" role="alert"></div>
                             <!-- Pass the client secret to the view so we can get the payment intent id -->
                             <input type="hidden" value="{{ client_secret }}" name="client_secret">
-                            <input type="unhidden" value="{{ cookie }}" name="basket_number">
+                            <input type="hidden" value="{{ basket_total.total_price__sum|floatformat:'2' }}" name="total_price">
+                            <input type="hidden" value="{{ cookie }}" name="basket_number">
                         </fieldset>
 
                         <div class="submit-button text-right mt-5 mb-2">                    
