--- a/templates/base.html
+++ b/templates/base.html
@@ -138,7 +138,23 @@
                                 <a href="{% url 'products' %}?category=hot food" class="dropdown-item">hot food</a>
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#account">account</a></li>
+                        <li class="nav-item dropdown">
+                            <a class="nav-link js-scroll-trigger" href="#" id="account-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                account
+                            </a>
+                            <div class="dropdown-menu border-0" aria-labelledby="user-options">
+                            {% if request.user.is_authenticated %}
+                                {% if request.user.is_superuser %}
+                                    <a href="" class="dropdown-item">Product Management</a>
+                                {% endif %}
+                                    <a href="" class="dropdown-item">My Profile</a>
+                                    <a href="{% url 'account_logout' %}" class="dropdown-item">Logout</a>
+                            {% else %}
+                                    <a href="{% url 'account_signup' %}" class="dropdown-item">Register</a>
+                                    <a href="{% url 'account_login' %}" class="dropdown-item">Login</a>
+                            {% endif %}
+                            </div>
+                        </li>
                         <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#service">customer service</a></li>
                         <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="#basket">basket</a></li>
                         <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="#bot">BUILD-A-BUFFET</a></li>
