--- a/templates/base.html
+++ b/templates/base.html
@@ -139,9 +139,15 @@
                             </div>
                         </li>
                         <li class="nav-item dropdown">
-                            <a class="nav-link js-scroll-trigger" href="#" id="account-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                account
-                            </a>
+                            {% if request.user.is_authenticated %}
+                                <a class="nav-link js-scroll-trigger" href="#" id="account-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    {{ request.user }} <!-- Credit: https://stackoverflow.com/questions/12615154/how-to-get-the-currently-logged-in-users-user-id-in-django -->
+                                </a>
+                            {% else %}
+                                <a class="nav-link js-scroll-trigger" href="#" id="account-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                                    account
+                                </a>
+                            {% endif %}
                             <div class="dropdown-menu border-0" aria-labelledby="user-options">
                             {% if request.user.is_authenticated %}
                                 {% if request.user.is_superuser %}
