--- a/static/css/styles.css
+++ b/static/css/styles.css
@@ -10505,12 +10505,19 @@ body {
 .align-vertically { /* credit to https://webdevblog.com/css-vertical-align/ */
     display: flex;
     align-items: center;
-    justify-content: center;
 }
 
 .text-xs-nav {
     font-size: 12px;
     line-height: 16px;
+}
+.user-br {
+    height:2px;
+    margin-bottom:-7px;
+    margin-top: -2px;
+}
+.user-text { /* https://stackoverflow.com/questions/1409649/how-to-change-the-height-of-a-br */
+    font-size: 10px;
 }
 
 @media screen and (orientation: portrait){ /* Credit: https://stackoverflow.com/questions/43589507/how-can-you-have-bootstrap-responsiveness-based-on-screen-ratio-instead-of-scree */
