--- a/templates/base.html
+++ b/templates/base.html
@@ -120,8 +120,8 @@
                 </button>
                 <div class="collapse navbar-collapse" id="navbarResponsive">
                     <ul class="navbar-nav ml-auto">
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="{% url 'home' %}">home</a></li>
-                        <li class="nav-item dropdown">
+                        <li class="nav-item my-auto"><a class="nav-link js-scroll-trigger" href="{% url 'home' %}">home</a></li>
+                        <li class="nav-item dropdown my-auto">
                             <a class="nav-link js-scroll-trigger" href="#" id="all-menus-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                                 menu
                             </a>
@@ -141,7 +141,10 @@
                         <li class="nav-item dropdown">
                             {% if request.user.is_authenticated %}
                                 <a class="nav-link js-scroll-trigger" href="#" id="account-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                                    {{ request.user }} <!-- Credit: https://stackoverflow.com/questions/12615154/how-to-get-the-currently-logged-in-users-user-id-in-django -->
+                                    account
+                                    <hr class="d-none d-lg-block user-br">
+                                    <span class="user-text">
+                                    ({{ request.user }})</span> <!-- Credit: https://stackoverflow.com/questions/12615154/how-to-get-the-currently-logged-in-users-user-id-in-django -->
                                 </a>
                             {% else %}
                                 <a class="nav-link js-scroll-trigger" href="#" id="account-link" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
@@ -161,7 +164,7 @@
                             {% endif %}
                             </div>
                         </li>
-                        <li class="nav-item"><a class="nav-link js-scroll-trigger" href="#service">customer service</a></li>
+                        <li class="nav-item my-auto"><a class="nav-link js-scroll-trigger" href="#service">customer service</a></li>
                         <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="#basket">basket</a></li>
                         <li class="nav-item d-lg-none"><a class="nav-link js-scroll-trigger" href="#bot">BUILD-A-BUFFET</a></li>
                     </ul>
