Build: populated order_items on profile.html

--- a/basket/templates/basket/basket.html
+++ b/basket/templates/basket/basket.html
@@ -10,10 +10,10 @@
 {% endblock %}
 
 {% block content %}
-    <!-- Produce-->
+    <!-- Basket -->
     <section class="products-section bg-light" id="products">
         <div class="container">
-            <!-- Produce One Row-->
+            <!-- Basket One Row-->
             <div class="row justify-content-center no-gutters">
                 <div class="col-xl-12">
                     <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">Basket</h1>
