--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -20,12 +20,12 @@
                     <h1 class="product-text-one mx-auto text-uppercase text-center flex-margin-b text-blue">My Profile</h1>
                 </div>
                 <div class="row">
-                    <div class="col-12 col-lg-4">
+                    <div class="px-3 col-12 col-lg-4">
                         <p class="text-muted">Default Delivery Information</p>
                         <form class="mt-3" action="{% url 'profile' %}" method="POST" id="profile-update-form">
                             {% csrf_token %}
                             {{ form|crispy }}
-                            <button class="btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
+                            <button class="mb-4 btn btn-black rounded-0 text-uppercase float-right">Update Information</button>
                         </form>
                     </div>
                     <div class="col-12 col-lg-8">
@@ -50,13 +50,27 @@
                                                 </a>
                                             </td>
                                             <!-- Credit: https://ourcodeworld.com/articles/read/555/how-to-format-datetime-objects-in-the-view-and-template-in-django -->
-                                            <td class="small">{{ order.date|date:'Y-m-d' }}</td>
+                                            <td class="small">{{ order.date|date:'d-M-y' }}</td>
                                             <td>
                                                 <ul class="list-unstyled">
                                                     {% for item in items %}
                                                         {% if item.order_number == order.order_number %}
                                                             <li class="small">
-                                                                <b>{{ item.category.title }}:</b> {{ item.name }}, {{ item.option }} <b>Qty: {{ item.servings }}</b>
+                                                                {% if item.option == "selected-one" %}
+                                                                    {% for option in options %}
+                                                                        <b>{{ item.category.title }}:</b> {{ item.name }}, {{ option.option1 }}. <b>Qty: {{ item.servings }}</b>
+                                                                    {% endfor %}
+                                                                {% endif %}
+                                                                {% if item.option == "selected-two" %}
+                                                                    {% for option in options %}
+                                                                        <b>{{ item.category.title }}:</b> {{ item.name }}, {{ option.option2 }}. <b>Qty: {{ item.servings }}</b>
+                                                                    {% endfor %}
+                                                                {% endif %}
+                                                                {% if item.option == "selected-three" %}
+                                                                    {% for option in options %}
+                                                                        <b>{{ item.category.title }}:</b> {{ item.name }}, {{ option.option3 }}. <b>Qty: {{ item.servings }}</b>
+                                                                    {% endfor %}
+                                                                {% endif %}
                                                             </li>
                                                         {% endif %}
                                                     {% endfor %}
