--- a/profiles/templates/profiles/profile.html
+++ b/profiles/templates/profiles/profile.html
@@ -44,7 +44,7 @@
                                     {% for order in orders %}
                                         <tr>
                                             <td>
-                                                <a href="{% url 'order_history' order.order_number %}"
+                                                <a href="{% url 'order_success' order.order_number %}"
                                                 title="{{ order.order_number }}">
                                                     {{ order.order_number|truncatechars:6 }}
                                                 </a>
@@ -76,7 +76,7 @@
                                                     {% endfor %}
                                                 </ul>
                                             </td>
-                                            <td>£{{ order.grand_total }}</td>
+                                            <td>£{{ order.order_total }}</td>
                                         </tr>
                                     {% endfor %}
                                 </tbody>
